tests/ui/consts/issue-17718-const-bad-values.stderr
error[E0764]: mutable borrows of temporaries that have their lifetime extended until the end of the program are not allowed
  --> $DIR/issue-17718-const-bad-values.rs:7:34
   |
LL | const C1: &'static mut [usize] = &mut [];
   |                                  ^^^^^^^ this mutable borrow refers to such a temporary
   |
   = note: Temporaries in constants and statics can have their lifetime extended until the end of the program
   = note: To avoid accidentally creating global mutable state, such temporaries must be immutable
   = help: If you really want global mutable state, try replacing the temporary by an interior mutable `static` or a `static mut`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0764`.
